# userver-nix-tgbot

./: .gitignore  CMakeLists.txt  Makefile  flake.nix  set-webhook.nix  tgbot-cpp.nix
configs/: static_config.yaml
nix/: packages.nix  service.nix
src/: activity_repository.hpp  bot_component.cpp  bot_component.hpp  main.cpp  secdist.cpp  secdist.hpp  userver_http_client_wrapper.hpp  utils.hpp  webhook_handler.cpp  webhook_handler.hpp
